manifest/arr/gateway_arr.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - jellyseerr.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - jellyseerr.example.com
  rules:
    - backendRefs:
        - name: jellyseerr
          port: 5055
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - bazarr.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - bazarr.example.com
  rules:
    - backendRefs:
        - name: bazarr
          port: 6767
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - prowlarr.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - prowlarr.example.com
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - radarr.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - radarr.example.com
  rules:
    - backendRefs:
        - name: radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-kids-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - radarr-kids.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-kids-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - radarr-kids.example.com
  rules:
    - backendRefs:
        - name: radarr-kids
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - readarr.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - readarr.example.com
  rules:
    - backendRefs:
        - name: readarr
          port: 8787
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - sab.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - sab.example.com
  rules:
    - backendRefs:
        - name: sabnzbd
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - sonarr.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - sonarr.example.com
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-as-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - sonarr-as.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-as-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - sonarr-as.example.com
  rules:
    - backendRefs:
        - name: sonarr-as
          port: 8989
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-redirect-http
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: http
  hostnames:
    - bazarr.example.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr-https
  namespace: arr
spec:
  parentRefs:
    - name: istio-ingress-internal
      namespace: istio-system
      sectionName: https
  hostnames:
    - bazarr.example.com
  rules:
    - backendRefs:
        - name: bazarr
          port: 6767
